# MTE-Core

./: .gitignore  COPYING  CREDITS  GlobalEnv.env  MAINTAINERS
cmake/: envconfig.cmake  recursively_include_src.cmake
cmake/userdef/: defines.cmake  libraries.cmake
devenv/CLion/: CMakeLists.txt
scripts/: envconf.sh  firebase_initset.sh  pkgtool.sh
scripts/include/: envvar_make.sh  envvar_rw.sh
src/common/ethernet/: Telepathy.cpp  Telepathy.hpp
src/common/hash/: md5.cpp  md5.hpp
src/common/log/: LogD.cpp  LogD.hpp
src/common/macrobox/: ExtendedBlackBox.hpp
src/common/mathematical/: MathematicalFunc.cpp  MathematicalFunc.hpp  MathematicalMacro.hpp
src/common/position/: GPS.hpp
src/common/random/: FisherYatesShuffle.cpp  FisherYatesShuffle.hpp
src/common/stringtools/: StringConverter.cpp  StringConverter.hpp  StringListIter.cpp  StringListIter.hpp  StringTokenizer.cpp
src/common/thread/: Thread.cpp  Thread.hpp
src/common/time/: Time.cpp  Time.hpp
src/core/dependency/: CoreDefines.hpp  CoreVariables.hpp
src/core/engines/FeatureSearcher/: FeatureDesc.cpp  FeatureDesc.hpp  FeatureDescMode.hpp  FeatureDescModeSelector.hpp  FeatureDescParam.hpp  FeatureSearcher.cpp  FeatureSearcher.hpp
src/core/engines/LaneSearcher/: LaneSearcher.cpp  LaneSearcher.hpp  LaneSearcherModuleDependency.hpp
src/core/sub-support/Streaming/: ExternalStreamViewer.cpp  ExternalStreamViewer.hpp  StreamingModuleDependency.hpp
src/core/utils/imageSerialize/: ImageSerialize.hpp
src/core/utils/imageStitcher/: ImageStitcher.cpp  ImageStitcher.hpp
src/core/utils/imageconv/: CvImageConv.cpp  CvImageConv.hpp
src/core/utils/position/: CalcCenter.cpp  CalcCenter.hpp  CalcRangePoint.cpp  CalcRangePoint.hpp
src/core/utils/randomID/: RandomID.cpp  RandomID.hpp
src/device/mmal/: mmalAdapter.cpp  mmalAdapter.hpp
src/device/serial/: SerialAdapter.cpp  SerialAdapter.hpp
src/experimental/camcv/: camcv.cpp
src/experimental/opencv_modect/: opencv_modect.cpp
src/experimental/raspivid/: raspivid.cpp
src/experimental/tcp-serversink/: tcp-serversink.cpp
src/firebase/: FireBaseAdapter.cpp  FireBaseAdapter.hpp  FireBaseAdapterVariable.hpp  FireBaseEngine.cpp  FireBaseEngine.hpp  main.cpp
src/firebase/pools/: FireBaseConnectPool.cpp  FireBaseConnectPool.hpp  FireBaseConnectVariable.hpp  FireBaseVideoPool.cpp  FireBaseVideoPool.hpp
src/modcontrols/: CommonModuleControl.hpp  CoreModuleControl.hpp  DevicesControl.hpp  LibrariesControl.hpp  TargetControl.hpp  modinclude.hpp
src/support/devices/: SerialSupport.hpp  mmalSupport.hpp
src/support/libraries/: BoostSupport.hpp  GStreamerSupport.hpp  OpenCVSupport.hpp  SQLiteSupport.hpp  pthreadSupport.hpp
src/system/: OSDependentUtil.cpp  OSDependentUtil.hpp  SystemCheck.hpp  SystemCommon.hpp  SystemDefines.hpp  SystemGlobalConstants.hpp  SystemGlobalHeaders.hpp  SystemGlobalVariables.hpp  SystemUtil.hpp
